--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,6 @@ header {
     width: 100%;
 }
 
-.main {
-    
-}
-
 .category {
     display: flex;
     margin-top: 100px;
@@ -36,3 +32,43 @@ header {
     padding-left: 8px;
     margin-top: 10px;
 } 
+
+.main {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 1rem;
+    padding: 10px;
+}
+
+.podcast {
+    width: 200px;
+    height: 280px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    padding: 15px;
+    
+}
+
+.podcast img{
+    width: 90%;
+    height: 50%;
+}
+
+.title {
+    margin-top: 5px;
+}
+
+.seasons {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.genres {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.update {
+   margin-top: 5px;
+    margin-bottom: 5px;
+}
