--- a/styles.css
+++ b/styles.css
@@ -45,8 +45,12 @@ header {
     height: 280px;
     background-color: #ffffff;
     border-radius: 8px;
-    padding: 15px;
-    
+    padding: 15px;    
+}
+
+.podcast:hover {
+    box-shadow: 0 0 3px #383838;
+    transition: 0.8s ease-in;
 }
 
 .podcast img{
@@ -72,3 +76,21 @@ header {
    margin-top: 5px;
     margin-bottom: 5px;
 }
+
+/* Modal styling */
+.modal {
+    z-index: 1;
+    background-color: #ffffff;
+    width: 70%;
+}
+
+.modal img {
+    width: 40px;
+    height: 50px;
+}
+
+.close {
+    color: red;
+}
+
+/*mobile view*/
